@@ -15,6 +15,7 @@
  * Fixed a bug where cached_role_ids would not be recalculated on rebuild rebuild.
  * Fixed type_cast bug on Time value.
  * Fixed a bug in 'is_ancestor?' where it would be confused by similar ids.
+ * Fixed a bug with 'find(22)' (find by literal zip).
 
 == 1.0.0.rc3 2011-05-26
 
